# fcu-2025-t1

./: .gitignore  CMakeLists.txt  package.xml
core/: CMakeLists.txt
core/launch/: core_launch.py  gazebo_launch.py
core/src/classes/: flight_controller.cpp  flight_controller.h  path.hpp  quadcopter.cpp  quadcopter.h  target.hpp  velocity.hpp
offb/: Cargo.toml  package.xml
offb/launch/: offb.launch.yaml
offb/src/: offb_node.rs
ros2_tools/: CMakeLists.txt  package.xml
ros2_tools/src/: ground_camera_node.cpp  lidar_data_node.cpp  lidar_to_px4_bridge.cpp
servo_control/: package.xml  setup.py
servo_control/servo_control/scripts/: servo_control.py
src/: main.cpp
src/classes/: flight_controller.cpp  flight_controller.h  quadcopter.cpp  quadcopter.h  target.cpp  target.h  target.hpp
src/offboard_control/: CMakeLists.txt  package.xml
src/offboard_control/src/: offboard_control.cpp
src/servo_control/: package.xml
src/servo_control/servo_control/scripts/: servo_control.py
src/yellow_detector/: package.xml  setup.cfg  setup.py
src/yellow_detector/yellow_detector/scripts/: green_detector.py  red_detector.py  yellow_detector.py
vision/: CMakeLists.txt  package.xml  setup.py
vision/msg/: Vision.msg
vision/scripts/: 1th.py  cv_tools.py  vision.py  vision_node.py
